--- a/package.json
+++ b/package.json
@@ -1,19 +1,22 @@
 {
-  "name": "express-server",
+  "name": "node-express",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node index",
-    "dev": "nodemon index"
+    "start": "node index.js",
+    "dev": "nodemon index.js"
   },
+  "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2",
-    "express-handlebars": "^7.1.2",
-    "mongoose": "^7.5.0",
-    "nodemon": "^3.0.1",
-    "uuid": "^9.0.0"
+    "express": "^4.16.4",
+    "express-handlebars": "^3.0.2",
+    "mongoose": "^5.5.3",
+    "uuid": "^3.3.2"
+  },
+  "devDependencies": {
+    "nodemon": "^1.18.11"
   }
 }
